// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserEndpoint the changePassword calls put parent method 1`] = `
Array [
  "password/change",
  Object {
    "data": Object {
      "current_password": "current",
      "password": "password",
      "password_confirmation": "password",
    },
  },
]
`;

exports[`UserEndpoint the changePassword calls put parent method 2`] = `
Array [
  "password/change",
  Object {
    "data": Object {
      "current_password": undefined,
      "password": "password",
      "password_confirmation": "password",
    },
  },
]
`;

exports[`UserEndpoint the confirmPassword calls post parent method 1`] = `
Array [
  "password/confirm",
  Object {
    "data": Object {
      "password": "password",
    },
  },
]
`;

exports[`UserEndpoint the current calls get parent method 1`] = `
Array [
  "user",
]
`;

exports[`UserEndpoint the resendEmailVerification calls post parent method 1`] = `
Array [
  "email/resend",
]
`;

exports[`UserEndpoint the show calls get parent method 1`] = `
Array [
  "user/123",
  Object {
    "params": Object {
      "include": Array [
        "name",
      ],
    },
  },
]
`;

exports[`UserEndpoint the update calls put parent method 1`] = `
Array [
  "user/4321",
  Object {
    "data": Object {
      "email": "email",
      "name": "John",
    },
  },
]
`;
